...
    let destinationExtendedWeatherView = DestinationWeatherInfoView()
    let sunTimesView = SunTimesView()
    private let dataProviderLabel = LegendLabel(title: "Météo par OpenWeatherMap")

    let headerView: HeaderView = {
        let view = HeaderView()
        view.titleLabel.text = "Météo"
        view.translatesAutoresizingMaskIntoConstraints = false
        view.heightAnchor.constraint(equalToConstant: 32).isActive = true
        return view
    }()

    let searchBar: UISearchBar = {
...
        bar.tintColor = .label
        bar.autocapitalizationType = .words
        bar.autocorrectionType = .no
        bar.enablesReturnKeyAutomatically = true
        bar.returnKeyType = .done
        bar.textContentType = .none
        bar.placeholder = "Recherchez"
        bar.translatesAutoresizingMaskIntoConstraints = false
        return bar
    }()

    private let mainStackView: UIStackView = {
        let stack = UIStackView()
...
